src/test/error/macro2.lns
macro _hoge():int {
   1, 2  // error
}

print( _hoge() );  // error
